src/app/app.component.less
* {
   font-family: Arial, Helvetica, sans-serif;
}

.gameTitle {
    font-size: x-large;
    margin: 4px;
}

.mainContainer {
    width: 100%;
    background-color: lightgrey;
    display:flex;
    flex-direction: column;
}

.panelContainer {
    display: flex;
}

.leftPanel {
    width: 30%;
    display: flex;
    flex-direction: column;
}

.centerPanel {
    width: 100%;
    display: flex;
}

.rightPanel {
    width: 30%;
    display: flex;
    flex-direction: column;
}

.timePanel {
  border: 1px solid black;
  height: 300px;
  margin: 4px;
}

.attributesPanel {
    border: 1px solid black;
    height: 200px;
    margin: 4px;
}

.healthPanel {
    border: 1px solid black;
    height: 100px;
    margin: 4px;
}

.activityPanel {
    border: 1px solid black;
    height: 612px;
    margin: 4px;
    width: 100%;
}

.equipmentPanel {
    border: 1px solid black;
    height: 200px;
    margin: 4px;
}

.homePanel {
    border: 1px solid black;
    height: 200px;
    margin: 4px;
}

.logPanel {
    border: 1px solid black;
    height: 200px;
    margin: 4px;
}

.inventoryPanel {
    border: 1px solid black;
    height: 100px;
    margin: 4px;
   //width: 100%;
}

footer {
    position: absolute;
    bottom: 1px;
    font-size: x-small;
}

